force-app/main/default/objects/User/fields/com_4__c.field-meta.xml
<CustomField>
    <fullName>com_4__c</fullName>
    <inlineHelpText>% com sales new map if Agent is Incomlend</inlineHelpText>
    <label>% com 4 New Map</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>