force-app/main/default/objects/User/fields/Com_5_new_Map__c.field-meta.xml
<CustomField>
    <fullName>Com_5_new_Map__c</fullName>
    <inlineHelpText>% com new Map , if no incomlend agent</inlineHelpText>
    <label>% Com 5 new Map</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>