force-app/main/default/objects/User/fields/Operation_Finance_CEO__c.field-meta.xml
<CustomField>
    <fullName>Operation_Finance_CEO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operation + Finance + CEO</label>
    <type>Checkbox</type>
</CustomField>