force-app/main/default/objects/User/fields/Sales_Com_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Com_1__c</fullName>
    <description>Sales Com 1 for % commission calculation in Map</description>
    <label>%Sales Com 1</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>