force-app/main/default/objects/User/fields/Sales_Com_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Com_2__c</fullName>
    <description>for sales calculation % in Map</description>
    <label>%Sales Com 2</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>