force-app/main/default/objects/User/fields/sales_Com_3__c.field-meta.xml
<CustomField>
    <fullName>sales_Com_3__c</fullName>
    <label>%sales Com 3</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>