force-app/main/default/objects/User/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>Objective in Volume to be Financed until and of Fiscal year</description>
    <label>Target Fiscal Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>