force-app/main/default/objects/User/fields/Trustee__c.field-meta.xml
<CustomField>
    <fullName>Trustee__c</fullName>
    <label>Trustee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amicorp</fullName>
            </value>
            <value>
                <fullName>Camelot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>