force-app/main/default/objects/User/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <formula>IF(CONTAINS(UserRole.Name, &quot;2&quot;),&quot;2&quot;,
IF(CONTAINS(UserRole.Name, &quot;3&quot;),&quot;3&quot;,
IF(CONTAINS(UserRole.Name, &quot;1&quot;),&quot;1&quot;,
IF(CONTAINS(UserRole.Name, &quot;4&quot;),&quot;4&quot;,
IF(CONTAINS(UserRole.Name, &quot;5&quot;),&quot;5&quot;,&quot;N/A&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>